--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -16,43 +16,58 @@
   "dependencies": {
     "@riophae/vue-treeselect": "^0.1.0",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.0",
+    "braces": "^2.3.1",
     "datatables.net": "^1.10.15",
     "datatables.net-bs": "^1.10.15",
     "datatables.net-buttons": "^1.5.3",
     "datatables.net-responsive": "^2.1.1",
     "datatables.net-responsive-bs": "^2.1.1",
+    "diff": "^3.5.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
+    "growl": "^1.10.0",
+    "handlebars": "^4.3.0",
+    "http-proxy-agent": "^2.1.0",
+    "https-proxy-agent": "^2.2.0",
+    "install": "^0.13.0",
+    "jquery": "^3.4.0",
     "jquery-validation": "^1.16.0",
     "jquery.easing": "^1.4.1",
+    "js-yaml": "^3.13.1",
     "jszip": "^3.1.5",
     "localforage": "^1.7.3",
     "lodash": "^4.17.13",
+    "lodash.defaultsdeep": "^4.6.1",
+    "lodash.mergewith": "^4.6.2",
+    "mixin-deep": "^1.3.2",
     "moment": "^2.18.1",
     "moment-range": "^3.0.3",
+    "npm": "^6.13.7",
     "papaparse": "^4.3.7",
     "select2": "^4.0.3",
     "select2-bootstrap-theme": "0.1.0-beta.10",
+    "serialize-javascript": "^2.1.1",
+    "set-value": "^2.0.1",
     "sweetalert2": "^6.11.5",
     "vee-validate": "^2.2.6",
     "vue": "^2.2.6",
     "vue-resource": "^1.3.3",
     "vue-router": "^2.3.1",
     "vue-select": "^2.6.4",
-    "vuejs-paginator": "^2.0.2"
+    "vuejs-paginator": "^2.0.2",
+    "ws": "^1.1.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.4.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.4.3",
+    "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "^4.1.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.4.3",
     "babel-preset-env": "^1.5.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -65,7 +80,7 @@
     "cross-env": "^4.0.0",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.1",
-    "eslint": "^3.19.0",
+    "eslint": "^4.18.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.7.1",
@@ -108,7 +123,7 @@
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
