--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,5 @@ werkzeug==0.14
 phonenumbers==8.12.15
 django-treebeard==4.3.1
 psycopg2==2.8.6
+whitenoise==5.3.0
+git+https://github.com/dbca-wa/django-media-serv.git#egg=django_media_serv
