--- a/dockerdev/Dockerfile
+++ b/dockerdev/Dockerfile
@@ -19,10 +19,10 @@ RUN cp /root/.profile /home/docker
 
 # For Linux
 RUN groupadd -g 20000 container
-RUN useradd -g 20000 -u 200000 container -s /bin/bash
+RUN useradd -g 20000 -u 20000 container -s /bin/bash
 
 RUN mkdir /home/container
-RUN chown docker.docker /home/container
+RUN chown container.container /home/container
 RUN cp /root/.bashrc /home/container
 RUN cp /root/.profile /home/container
 
