--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,8 @@
 	           "type=bind,source=/data/data/containerhome/,target=/home/container/"
 	          ],	
 	"appPort": [ "7012:8080","9106:9106","9107:9107","9108:9108","9109:9109","9110:9110"],
-	"runArgs": ["--env-file","${localEnv:HOME}/vscode-env/boranga.env",
-		   "--hostname","boranga-dev"
+	"runArgs": ["--env-file","${localEnv:HOME}/vscode-env/commercialoperator.env",
+		   "--hostname","commercialoperator-dev"
 		   ],
 	"forwardPorts": [9106,9107,9108,9109,9110],
 	"initializeCommand" : "${localEnv:HOME}/docker-scripts-dev/windows_vbox/postgres_docker_load.sh && ${localEnv:HOME}/docker-scripts-dev/windows_vbox/ledger_docker_load.sh "
