--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -59,6 +59,7 @@
     "ws": "^1.1.5"
   },
   "devDependencies": {
+    "@vue/runtime-dom": "^3.4.37",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
@@ -81,12 +82,11 @@
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.1",
     "eslint": "^4.18.2",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-standard": "^2.3.1",
+    "eslint-plugin-vue": "^9.27.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -112,6 +112,7 @@
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
+    "prettier": "^3.3.3",
     "rimraf": "^2.6.1",
     "selenium-server": "^3.4.0",
     "semver": "^5.3.0",
