--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 Django==3.2.25
 git+https://github.com/dbca-wa/ledger_api_client.git#egg=ledger_api_client
 django-extensions==3.2.3 #~=3.2
-git+https://github.com/dbca-wa/ledger#egg=ledger
-# social-auth-app-django==5.3.0 # Last version to support Python 3.7
-# social-auth-core~=4.4.2 # Last version to support Python 3.7
 coverage==6.5.0 # Last version supported by coveralls
 coveralls==3.3.1 #~=3.3
 reportlab==4.2.2 #~=4.1
@@ -17,8 +14,8 @@ django-countries==7.5.1 #~=7.5
 django-cron==0.6.0 # This project is no longer maintained
 django-dynamic-fixture==3.1.3
 openpyxl==3.1.3 #~=3.1 # version conflict tabulator
-datapackage~=1.0 #~=1.15 # version conflict rfc3986
-jsontableschema==0.10.1
+datapackage~=1.15 #~=1.15 # version conflict rfc3986
+# jsontableschema==0.10.1
 python-dateutil==2.8.2 #~=2.8 # version conflict rfc3986
 py4j==0.10.9.7 #~=0.10
 djangorestframework==3.15.1 #~=3.15.1 # Last version to support Python 3.7
@@ -37,6 +34,7 @@ django-reset-migrations==0.4.0 #~=0.4
 django-ckeditor==6.3.2 #~=6.3.2 # Last version to support Python 3.7
 djangorestframework-datatables==0.7.0 #~=0.7
 django-confy==1.0.4
+confy==0.4.1
 xlwt==1.3.0
 xlsxwriter==3.2.0 #~=3.2
 gunicorn==21.2.0 #~=21.2
@@ -49,7 +47,6 @@ dj-database-url==2.2.0 #~=2.1
 werkzeug==2.2.3 #~=2.2.3 # Last version to support Python 3.7
 phonenumbers==8.13.43 #~=8.13
 django-treebeard==4.5.1 #~=4.5.1 # Last version to support Python 3.7
-# psycopg2==2.9.4 #~=2.9.9
 psycopg2-binary>=2.9.4
 whitenoise==5.3.0
 git+https://github.com/dbca-wa/django-media-serv.git#egg=django_media_serv
