--- a/commercialoperator/frontend/commercialoperator/.eslintrc
+++ b/commercialoperator/frontend/commercialoperator/.eslintrc
@@ -1,13 +1,13 @@
 {
     "extends": [
         "eslint:recommended",
-        "plugin:vue/vue3-recommended",
+        "plugin:vue/recommended",
         "prettier"
     ],
     "plugins": ["vue", "prettier"],
-    // "rules": {
-    //     "prettier/prettier": "error"
-    // },
+    "rules": {
+        "prettier/prettier": "error"
+    },
     "parserOptions": {
         "sourceType": "module",
         "ecmaVersion": 11
