--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -45,34 +45,30 @@
     "moment-range": "^3.0.3",
     "npm": "^6.14.18",
     "papaparse": "^4.6.3",
-    "select2": "^4.0.13",
-    "select2-bootstrap-theme": "0.1.0-beta.10",
+    "select2": "*",
+    "select2-bootstrap-5-theme": "^1.3.0",
     "serialize-javascript": "^2.1.2",
     "set-value": "^2.0.1",
-    "sweetalert2": "^6.11.5",
+    "sweetalert2": "^11.7.27",
     "vee-validate": "^2.2.15",
     "vue": "^2.7.16",
     "vue-resource": "^1.5.3",
     "vue-router": "^2.3.1",
     "vue-select": "^2.6.4",
     "vuejs-paginator": "^2.0.2",
-    "ws": "^1.1.5"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "^4.1.3",
-    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.4.3",
     "babel-preset-env": "^1.5.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
-    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.46.0",
     "connect-history-api-fallback": "^1.6.0",
@@ -80,11 +76,10 @@
     "cross-env": "^4.0.0",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.1",
+    "depcheck": "^1.4.7",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^6.2.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-standard": "^2.3.1",
     "eslint-plugin-vue": "^9.27.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.19.2",
@@ -94,8 +89,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
-    "inject-loader": "^3.0.0",
-    "karma": "^1.7.0",
+    "karma": "^6.4.4",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
@@ -104,7 +98,6 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.3",
-    "lolex": "^1.6.0",
     "mocha": "^3.4.1",
     "nightwatch": "^0.9.15",
     "opn": "^4.0.2",
@@ -126,11 +119,11 @@
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.26.1",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^6.0.1"
   },
   "engines": {
-    "node": ">= 18.20.4",
-    "npm": ">= 10.7.0"
+    "node": ">= 20.11.1",
+    "npm": ">= 10.2.4"
   },
   "browserslist": [
     "> 1%",
