--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ django-extensions==3.2.3 #~=3.2
 coverage==6.5.0 # Last version supported by coveralls
 coveralls==3.3.1 #~=3.3
 reportlab==4.2.2 #~=4.1
-django_bootstrap3==23.2 # Last version to support Python 3.7
+# django_bootstrap3==23.2 # Last version to support Python 3.7
 django-braces==1.15.0 #~=1.15.0
 django-datatables-view==1.20.0 #~=1.20
 django-reversion==5.0.12 #~=5.0
@@ -34,7 +34,7 @@ django-reset-migrations==0.4.0 #~=0.4
 django-ckeditor==6.3.2 #~=6.3.2 # Last version to support Python 3.7
 djangorestframework-datatables==0.7.0 #~=0.7
 django-confy==1.0.4
-confy==0.4.1
+# confy==0.4.1
 xlwt==1.3.0
 xlsxwriter==3.2.0 #~=3.2
 gunicorn==21.2.0 #~=21.2
@@ -48,6 +48,7 @@ werkzeug==2.2.3 #~=2.2.3 # Last version to support Python 3.7
 phonenumbers==8.13.43 #~=8.13
 django-treebeard==4.5.1 #~=4.5.1 # Last version to support Python 3.7
 psycopg2-binary>=2.9.4
+django-widget-tweaks~=1.5
 whitenoise==5.3.0
 git+https://github.com/dbca-wa/django-media-serv.git#egg=django_media_serv
 python-decouple==3.8 #~=3.8
