--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,6 @@ whitenoise==5.3.0
 git+https://github.com/dbca-wa/django-media-serv.git#egg=django_media_serv
 python-decouple==3.8 #~=3.8
 git+https://github.com/dbca-wa/appmonitor_client.git#egg=appmonitor_client
+git+https://github.com/dbca-wa/django5-utils-six.git#egg=django5_six
+django-phonenumber-field~=7.3
+babel~=2.14
