--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -47,6 +47,7 @@
     "papaparse": "^4.6.3",
     "select2": "*",
     "select2-bootstrap-5-theme": "^1.3.0",
+    "select2-bootstrap-theme": "^0.1.0-beta.10",
     "serialize-javascript": "^2.1.2",
     "set-value": "^2.0.1",
     "sweetalert2": "^11.7.27",
@@ -63,6 +64,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "^4.1.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.4.3",
     "babel-preset-env": "^1.5.0",
