--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ django-extensions==3.2.3 #~=3.2
 coverage==6.5.0 # Last version supported by coveralls
 coveralls==3.3.1 #~=3.3
 reportlab==4.2.2 #~=4.1
-# django_bootstrap3==23.2 # Last version to support Python 3.7
+django_bootstrap3==23.2 #~=24.2
 django-braces==1.15.0 #~=1.15.0
 django-datatables-view==1.20.0 #~=1.20
 django-reversion==5.0.12 #~=5.0
