--- a/dockerdev/Dockerfile
+++ b/dockerdev/Dockerfile
@@ -1,5 +1,5 @@
 # Prepare the base environment.
-FROM dbcawa/commercialoperator:latest as builder_base_commercialoperatordev
+FROM dbcawa/commercialoperator:latest_seg as builder_base_commercialoperatordev
 USER root
 RUN apt-get update
 # RUN apt-get install --no-install-recommends -y npm patch
