--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -2,7 +2,7 @@
   "name": "commercialoperator",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Brian Ndwiga <ndwigabrian@gmail.com>",
+  "author": "asi@dbca.wa.gov.au",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -14,8 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "@riophae/vue-treeselect": "^0.1.0",
-    "babel-polyfill": "^6.26.0",
+    "@riophae/vue-treeselect": "^0.4.0",
     "bootstrap": "^3.4.1",
     "braces": "^2.3.2",
     "datatables.net": "^1.13.11",
@@ -57,20 +56,18 @@
     "vue-router": "^2.3.1",
     "vue-select": "^2.6.4",
     "vuejs-paginator": "^2.0.2",
+    "webpack-merge": "^6.0.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-istanbul": "^4.1.3",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.26.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.4.3",
     "babel-preset-env": "^1.5.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "chalk": "^1.1.3",
     "chromedriver": "^2.46.0",
     "connect-history-api-fallback": "^1.6.0",
@@ -85,10 +82,9 @@
     "eslint-plugin-vue": "^9.27.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.19.2",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.0.0",
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
     "karma": "^6.4.4",
@@ -117,11 +113,10 @@
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.7.16",
-    "webpack": "^2.5.1",
+    "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.26.1",
-    "webpack-merge": "^6.0.1"
+    "webpack-dev-middleware": "^2.0.2",
+    "webpack-hot-middleware": "^2.26.1"
   },
   "engines": {
     "node": ">= 20.11.1",
