--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==3.2.25
 git+https://github.com/dbca-wa/ledger_api_client.git#egg=ledger_api_client
+# git+https://github.com/dbca-wa/webtemplate2.git#egg=webtemplate_dbca
 django-extensions==3.2.3 #~=3.2
 coverage==6.5.0 # Last version supported by coveralls
 coveralls==3.3.1 #~=3.3
