--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ venv2/
 node_modules/
 #cronjobs
 .ropeproject/
-mooring/cache/*
+commercialoperator/cache/*
 .ropeproject/
 
 # Byte-compiled / optimized / DLL files
