--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -5,34 +5,34 @@
   "author": "asi@dbca.wa.gov.au",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "@riophae/vue-treeselect": "^0.4.0",
-    "bootstrap": "^3.4.1",
+    "@babel/runtime": "^7.22.10",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@vue/cli-service": "^5.0.8",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap":"^3.4.1",
     "braces": "^2.3.2",
     "datatables.net": "^1.13.11",
     "datatables.net-bs": "^1.13.11",
     "datatables.net-buttons": "^1.7.1",
     "datatables.net-responsive": "^2.5.1",
     "datatables.net-responsive-bs": "^2.5.1",
+    "datetimepicker": "^0.1.39",
     "diff": "^3.5.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.49",
-    "font-awesome": "^4.7.0",
     "growl": "^1.10.5",
     "handlebars": "^4.7.8",
     "http-proxy-agent": "^2.1.0",
     "https-proxy-agent": "^2.2.4",
     "install": "^0.13.0",
     "jquery": "^3.7.1",
-    "jquery-validation": "^1.21.0",
     "jquery.easing": "^1.4.1",
+    "jquery-validation": "^1.21.0",
     "js-yaml": "^3.14.1",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
@@ -40,9 +40,8 @@
     "lodash.defaultsdeep": "^4.6.1",
     "lodash.mergewith": "^4.6.2",
     "mixin-deep": "^1.3.2",
-    "moment": "^2.30.1",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "moment-range": "^3.0.3",
-    "npm": "^10.2.4",
     "papaparse": "^4.6.3",
     "select2": "*",
     "select2-bootstrap-5-theme": "^1.3.0",
@@ -56,18 +55,12 @@
     "vue-router": "^2.3.1",
     "vue-select": "^2.6.4",
     "vuejs-paginator": "^2.0.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
     "webpack-merge": "^6.0.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.4.3",
-    "babel-preset-env": "^1.5.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
     "chalk": "^1.1.3",
     "chromedriver": "^2.46.0",
     "connect-history-api-fallback": "^1.6.0",
@@ -82,20 +75,9 @@
     "eslint-plugin-vue": "^9.27.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.19.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^3.0.0",
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
-    "karma": "^6.4.4",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.8",
-    "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "^2.0.3",
     "mocha": "^3.4.1",
     "nightwatch": "^0.9.15",
     "opn": "^4.0.2",
@@ -110,13 +92,8 @@
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.3.4",
-    "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.7.16",
-    "webpack": "^3.0.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-dev-middleware": "^2.0.2",
-    "webpack-hot-middleware": "^2.26.1"
+    "webpack-bundle-analyzer": "^3.9.0"
   },
   "engines": {
     "node": ">= 20.11.1",
