--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -15,11 +15,12 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@vue/cli-service": "^5.0.8",
     "babel-polyfill": "^6.26.0",
-    "bootstrap":"^3.4.1",
+    "bootstrap": "^3.4.1",
     "braces": "^2.3.2",
     "datatables.net": "^1.13.11",
     "datatables.net-bs": "^1.13.11",
     "datatables.net-buttons": "^1.7.1",
+    "datatables.net-buttons-bs": "^3.1.2",
     "datatables.net-responsive": "^2.5.1",
     "datatables.net-responsive-bs": "^2.5.1",
     "datetimepicker": "^0.1.39",
@@ -31,8 +32,8 @@
     "https-proxy-agent": "^2.2.4",
     "install": "^0.13.0",
     "jquery": "^3.7.1",
-    "jquery.easing": "^1.4.1",
     "jquery-validation": "^1.21.0",
+    "jquery.easing": "^1.4.1",
     "js-yaml": "^3.14.1",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
