--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -43,6 +43,7 @@
     "mixin-deep": "^1.3.2",
     "moment-locales-webpack-plugin": "^1.2.0",
     "moment-range": "^3.0.3",
+    "ora": "^1.2.0",
     "papaparse": "^4.6.3",
     "select2": "*",
     "select2-bootstrap-5-theme": "^1.3.0",
@@ -53,47 +54,19 @@
     "vee-validate": "^2.2.15",
     "vue": "^2.7.16",
     "vue-resource": "^1.5.3",
-    "vue-router": "^2.3.1",
+    "vue-router": "^2.8.1",
     "vue-select": "^2.6.4",
     "vuejs-paginator": "^2.0.2",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^6.0.1",
-    "ws": "^8.18.0"
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
-    "chalk": "^1.1.3",
-    "chromedriver": "^2.46.0",
-    "connect-history-api-fallback": "^1.6.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "cross-env": "^4.0.0",
-    "cross-spawn": "^5.1.0",
-    "css-loader": "^0.28.1",
     "depcheck": "^1.4.7",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.27.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.19.2",
-    "file-loader": "^0.11.1",
-    "http-proxy-middleware": "^0.17.4",
-    "imports-loader": "^0.7.1",
-    "mocha": "^3.4.1",
-    "nightwatch": "^0.9.15",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.2",
-    "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
     "prettier": "^3.3.3",
-    "rimraf": "^2.7.1",
-    "selenium-server": "^3.141.59",
-    "semver": "^5.7.2",
-    "shelljs": "^0.7.7",
-    "sinon": "^2.2.0",
-    "sinon-chai": "^2.10.0",
-    "url-loader": "^0.5.8",
-    "vue-template-compiler": "^2.7.16",
     "webpack-bundle-analyzer": "^3.9.0"
   },
   "engines": {
