--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -11,11 +11,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "@babel/runtime": "^7.22.10",
-    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@babel/runtime": "^7.25.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@vue/cli-service": "^5.0.8",
     "bootstrap": "^3.4.1",
-    "braces": "^3.0.3",
     "datatables.net": "^1.13.11",
     "datatables.net-bs": "^1.13.11",
     "datatables.net-buttons": "^1.7.1",
@@ -40,17 +39,14 @@
     "vue": "^2.7.16",
     "vue-resource": "^1.5.3",
     "vue-router": "^2.8.1",
-    "vue-select": "^2.6.4",
-    "vuejs-paginator": "^2.0.2",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "vue-select": "^3.20.2"
   },
   "devDependencies": {
     "depcheck": "^1.4.7",
-    "eslint": "^8.15.0",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint-plugin-vue": "^9.28.0",
     "prettier": "^3.3.3",
     "webpack-bundle-analyzer": "^3.9.0"
   },
