--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -47,7 +47,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.28.0",
+    "globals": "^15.9.0",
     "prettier": "^3.3.3",
+    "vue-eslint-parser": "^9.4.3",
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "engines": {
