--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/runtime": "^7.25.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@riophae/vue-treeselect": "^0.4.0",
     "@vue/cli-service": "^5.0.8",
     "bootstrap": "^3.4.1",
     "datatables.net": "^1.13.11",
