--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -35,6 +35,7 @@
     "select2-bootstrap-5-theme": "^1.3.0",
     "select2-bootstrap-theme": "^0.1.0-beta.10",
     "sweetalert2": "^11.7.27",
+    "uuid": "^10.0.0",
     "vee-validate": "<3.0.0",
     "vue": "^2.7.16",
     "vue-resource": "^1.5.3",
