--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -15,13 +15,10 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@riophae/vue-treeselect": "^0.4.0",
     "@vue/cli-service": "^5.0.8",
-    "bootstrap": "^3.4.1",
-    "datatables.net": "^1.13.11",
-    "datatables.net-bs": "^1.13.11",
     "datatables.net-buttons": "^2.4.3",
-    "datatables.net-buttons-bs": "^2.4.3",
-    "datatables.net-responsive": "^2.5.1",
-    "datatables.net-responsive-bs": "^2.5.1",
+    "datatables.net-bs5": "^1.13.11",
+    "datatables.net-buttons-bs5": "^2.4.3",
+    "datatables.net-responsive-bs5": "^2.5.1",
     "jquery": "^3.7.1",
     "jquery-validation": "^1.21.0",
     "jquery.easing": "^1.4.1",
@@ -33,7 +30,6 @@
     "moment-range": "^4.0.2",
     "select2": "*",
     "select2-bootstrap-5-theme": "^1.3.0",
-    "select2-bootstrap-theme": "^0.1.0-beta.10",
     "sweetalert2": "^11.7.27",
     "uuid": "^10.0.0",
     "vee-validate": "<3.0.0",
