--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "3.2.25"
-ledger_api_client = {git = "https://github.com/dbca-wa/ledger_api_client.git"}
-webtemplate_dbca = {git = "https://github.com/dbca-wa/webtemplate2.git"}
+ledger-api-client = {git = "https://github.com/dbca-wa/ledger_api_client.git"}
+webtemplate-dbca = {git = "https://github.com/dbca-wa/webtemplate2.git"}
 django-extensions = "^3.2.3"
 coverage = "^6.5.0"
 coveralls = "^3.3.1"
@@ -57,10 +57,10 @@ django-treebeard = "^4.5.1"
 psycopg2-binary = "^2.9.10"
 django-widget-tweaks = ">=1.5,<2.0"
 whitenoise = "^5.3.0"
-django_media_serv = {git = "https://github.com/dbca-wa/django-media-serv.git"}
+django-media-serv = {git = "https://github.com/dbca-wa/django-media-serv.git"}
 python_decouple = "^3.8"
 appmonitor-client = {git = "https://github.com/dbca-wa/appmonitor_client.git"}
-django5_six = {git = "https://github.com/dbca-wa/django5-utils-six.git"}
+django5-six = {git = "https://github.com/dbca-wa/django5-utils-six.git"}
 django-phonenumber-field = ">=7.3,<8.0"
 babel = ">=2.14,<3.0"
 
