Updated python packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ django-crispy-forms==2.0 ; python_version >= "3.12" and python_version < "4.0"
 django-cron==0.6.0 ; python_version >= "3.12" and python_version < "4.0"
 django-datatables-view==1.20.0 ; python_version >= "3.12" and python_version < "4.0"
 django-dirtyfields==1.9.3 ; python_version >= "3.12" and python_version < "4.0"
-django-dynamic-fixture==3.1.3 ; python_version >= "3.12" and python_version < "4.0"
+django-dynamic-fixture==4.0.1 ; python_version >= "3.12" and python_version < "4.0"
 django-extensions==3.2.3 ; python_version >= "3.12" and python_version < "4.0"
 django-extra-fields==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
 django-filter==23.5 ; python_version >= "3.12" and python_version < "4.0"
@@ -37,7 +37,7 @@ django-phonenumber-field==7.3.0 ; python_version >= "3.12" and python_version < 
 django-preserialize @ git+https://github.com/xzzy/django-preserialize.git@dbf5755dba7c75264120fedbfac976777975879e ; python_version >= "3.12" and python_version < "4.0"
 django-recurrence==1.11.1 ; python_version >= "3.12" and python_version < "4.0"
 django-reset-migrations==0.4.0 ; python_version >= "3.12" and python_version < "4.0"
-django-reversion-compare==0.15.0 ; python_version >= "3.12" and python_version < "4.0"
+django-reversion-compare==0.18.1 ; python_version >= "3.12" and python_version < "4.0"
 django-reversion==5.0.12 ; python_version >= "3.12" and python_version < "4.0"
 django-taggit==4.0.0 ; python_version >= "3.12" and python_version < "4.0"
 django-treebeard==4.7.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -65,7 +65,9 @@ jsonschema-specifications==2024.10.1 ; python_version >= "3.12" and python_versi
 jsonschema==4.23.0 ; python_version >= "3.12" and python_version < "4.0"
 ledger-api-client @ git+https://github.com/dbca-wa/ledger_api_client.git@0264a892230be487d639614f6367f8b5a50317f1 ; python_version >= "3.12" and python_version < "4.0"
 linear-tsv==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
+markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==3.0.1 ; python_version >= "3.12" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 mixer==7.2.2 ; python_version >= "3.12" and python_version < "4.0"
 openpyxl==3.1.3 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -73,7 +75,8 @@ phonenumbers==8.13.47 ; python_version >= "3.12" and python_version < "4.0"
 pillow==11.0.0 ; python_version >= "3.12" and python_version < "4"
 psycopg2-binary==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
 py4j==0.10.9.7 ; python_version >= "3.12" and python_version < "4.0"
-pycountry==22.3.5 ; python_version >= "3.12" and python_version < "4"
+pycountry==24.6.1 ; python_version >= "3.12" and python_version < "4.0"
+pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
 pypdf2==3.0.1 ; python_version >= "3.12" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.0"
 python-decouple==3.8 ; python_version >= "3.12" and python_version < "4.0"
@@ -82,9 +85,9 @@ referencing==0.35.1 ; python_version >= "3.12" and python_version < "4.0"
 reportlab==4.2.5 ; python_version >= "3.12" and python_version < "4"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
 rfc3986==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
+rich==13.9.2 ; python_version >= "3.12" and python_version < "4.0"
 rpds-py==0.20.0 ; python_version >= "3.12" and python_version < "4.0"
 s3transfer==0.10.3 ; python_version >= "3.12" and python_version < "4.0"
-setuptools==75.2.0 ; python_version >= "3.12" and python_version < "4"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sqlalchemy==2.0.36 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.5.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -95,8 +98,8 @@ tzdata==2024.2 ; python_version >= "3.12" and python_version < "4.0"
 unicodecsv==0.14.1 ; python_version >= "3.12" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
 webtemplate-dbca @ git+https://github.com/dbca-wa/webtemplate2.git@663d1cd27b9bbae85ae9d035a023794dd97daeb6 ; python_version >= "3.12" and python_version < "4.0"
-werkzeug==2.3.8 ; python_version >= "3.12" and python_version < "4.0"
-whitenoise==5.3.0 ; python_version >= "3.12" and python_version < "4"
+werkzeug==3.0.4 ; python_version >= "3.12" and python_version < "4.0"
+whitenoise==6.7.0 ; python_version >= "3.12" and python_version < "4.0"
 xlrd==2.0.1 ; python_version >= "3.12" and python_version < "4.0"
 xlsxwriter==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
 xlwt==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
