--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Boranga Development",
+	"name": "COLS Development",
 	"image": "dbcawa/docker_app_dev:commercialoperator_dev_latest",
 	"remoteUser": "container",
 	"workspaceFolder": "/data/data/projects/commercialoperator",
@@ -11,5 +11,5 @@
 		   "--hostname","commercialoperator-dev"
 		   ],
 	"forwardPorts": [9106,9107,9108,9109,9110],
-	"initializeCommand" : "${localEnv:HOME}/docker-scripts-dev/windows_vbox/postgres_docker_load.sh && ${localEnv:HOME}/docker-scripts-dev/windows_vbox/ledger_docker_load.sh "
+	"initializeCommand" : "${localEnv:HOME}/docker-scripts-dev/windows_vbox/postgres_docker_load_2404.sh"
 }
