--- a/vscode/launch.json
+++ b/vscode/launch.json
@@ -9,6 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/manage_co.py",
+            "pythonPath": "${workspaceFolder}/venv/bin/python",
             "args": [
                 "runserver",
                 "0.0.0.0:9106"
