--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "3.2.25"
+django = "5.0.8"
 ledger-api-client = {git = "https://github.com/dbca-wa/ledger_api_client.git"}
 webtemplate-dbca = {git = "https://github.com/dbca-wa/webtemplate2.git"}
 django-extensions = ">=3.2.3"
@@ -23,7 +23,7 @@ django-countries = ">=7.5.1"
 django-cron = ">=0.6.0"
 django-dynamic-fixture = ">=3.1.3"
 django-preserialize = {git = "https://github.com/xzzy/django-preserialize.git"}
-openpyxl = "3.1.3"
+openpyxl = ">=3.1.3"
 datapackage = ">=1.15,<2.0"
 python-dateutil = ">=2.8.2"
 py4j = ">=0.10.9.7"
@@ -63,6 +63,7 @@ appmonitor-client = {git = "https://github.com/dbca-wa/appmonitor_client.git"}
 django5-six = {git = "https://github.com/dbca-wa/django5-utils-six.git"}
 django-phonenumber-field = ">=7.3,<8.0"
 babel = ">=2.14,<3.0"
+pytz = "^2020.1"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = ">=3.8"
