--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ pypdf2 = ">=3.0.1"
 django-extra-fields = ">=3.0.2"
 django-crispy-forms = ">=2.0"
 django-reset-migrations = ">=0.4.0"
-django-ckeditor = ">=6.3.2"
+django-ckeditor-5 = ">=0.2"
 djangorestframework-datatables = ">=0.7.0"
 django-confy = ">=1.0.4"
 xlwt = ">=1.3.0"
