--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ django-datatables-view = ">=1.20.0"
 django-reversion = ">=5.0.12"
 django-reversion-compare = ">=0.15.0"
 django-countries = ">=7.5.1"
-django-cron = ">=0.6.0"
+django-cron = {git = "https://github.com/jorenham/django-cron.git", rev="master"}
 django-dynamic-fixture = ">=3.1.3"
 django-preserialize = {git = "https://github.com/xzzy/django-preserialize.git"}
 openpyxl = ">=3.1.3"
