--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ appmonitor-client @ git+https://github.com/dbca-wa/appmonitor_client.git@af2475b
 asgiref==3.8.1 ; python_version >= "3.12" and python_version < "4.0"
 attrs==24.2.0 ; python_version >= "3.12" and python_version < "4.0"
 babel==2.16.0 ; python_version >= "3.12" and python_version < "4.0"
-boto3==1.35.64 ; python_version >= "3.12" and python_version < "4.0"
-botocore==1.35.64 ; python_version >= "3.12" and python_version < "4.0"
+boto3==1.35.66 ; python_version >= "3.12" and python_version < "4.0"
+botocore==1.35.66 ; python_version >= "3.12" and python_version < "4.0"
 cached-property==2.0.1 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
 chardet==5.2.0 ; python_version >= "3.12" and python_version < "4"
@@ -22,7 +22,7 @@ django-ckeditor-5==0.2.15 ; python_version >= "3.12" and python_version < "4.0"
 django-confy==1.0.4 ; python_version >= "3.12" and python_version < "4.0"
 django-countries==7.6.1 ; python_version >= "3.12" and python_version < "4.0"
 django-crispy-forms==2.3 ; python_version >= "3.12" and python_version < "4.0"
-django-cron==0.6.0 ; python_version >= "3.12" and python_version < "4.0"
+django-cron @ git+https://github.com/jorenham/django-cron.git@cec74656a6cada4c40fec43f46594bf332268ab1 ; python_version >= "3.12" and python_version < "4.0"
 django-datatables-view==1.20.0 ; python_version >= "3.12" and python_version < "4.0"
 django-dirtyfields==1.9.5 ; python_version >= "3.12" and python_version < "4.0"
 django-dynamic-fixture==4.0.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -86,7 +86,7 @@ requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
 rfc3986==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
 rpds-py==0.21.0 ; python_version >= "3.12" and python_version < "4.0"
-s3transfer==0.10.3 ; python_version >= "3.12" and python_version < "4.0"
+s3transfer==0.10.4 ; python_version >= "3.12" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sqlalchemy==2.0.36 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.5.2 ; python_version >= "3.12" and python_version < "4.0"
