--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,10 @@ install:
 before_script:
     - touch .env
     - psql -c 'create database travis_ci_test;' -U postgres
-    - python manage_co.py migrate --noinput
+    - python manage.py migrate --noinput
 script:
-    - COVERAGE_FILE=.coverage_ledger coverage run --source="." manage_co.py test --noinput ledger
-    - COVERAGE_FILE=.coverage_co coverage run --source="." manage_co.py test --noinput commercialoperator
+    - COVERAGE_FILE=.coverage_ledger coverage run --source="." manage.py test --noinput ledger
+    - COVERAGE_FILE=.coverage_co coverage run --source="." manage.py test --noinput commercialoperator
     - coverage combine .coverage_ledger .coverage_co
 after_success:
     - coveralls
