--- a/vscode/launch.json
+++ b/vscode/launch.json
@@ -8,13 +8,12 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/manage_co.py",
+            "program": "${workspaceFolder}/manage.py",
             "args": [
                 "runserver",
                 "0.0.0.0:9106"
             ],
             "django": true
-            
         }
     ]
 }
