Removed term boranga from a couple of locations that happened to be there by accident

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Boranga Development",
+	"name": "Commercial Operator Development",
 	"image": "dbcawa/docker_app_dev:commercialoperator_seg_dev_latest",
 	"remoteUser": "container",
 	"workspaceFolder": "/data/data/projects/commercialoperator",
