--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ appmonitor-client @ git+https://github.com/dbca-wa/appmonitor_client.git@06ba2a1
 asgiref==3.8.1 ; python_version >= "3.12" and python_version < "4.0"
 attrs==25.3.0 ; python_version >= "3.12" and python_version < "4.0"
 babel==2.17.0 ; python_version >= "3.12" and python_version < "4.0"
-boto3==1.37.29 ; python_version >= "3.12" and python_version < "4.0"
-botocore==1.37.29 ; python_version >= "3.12" and python_version < "4.0"
+boto3==1.37.32 ; python_version >= "3.12" and python_version < "4.0"
+botocore==1.37.32 ; python_version >= "3.12" and python_version < "4.0"
 cached-property==2.0.1 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2025.1.31 ; python_version >= "3.12" and python_version < "4.0"
-chardet==5.2.0 ; python_version >= "3.12" and python_version < "4"
+chardet==5.2.0 ; python_version >= "3.12" and python_version < "4.0"
 charset-normalizer==3.4.1 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.8 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
@@ -26,8 +26,9 @@ django-cron @ git+https://github.com/jorenham/django-cron.git@cec74656a6cada4c40
 django-datatables-view==1.20.0 ; python_version >= "3.12" and python_version < "4.0"
 django-dirtyfields==1.9.7 ; python_version >= "3.12" and python_version < "4.0"
 django-dynamic-fixture==4.0.1 ; python_version >= "3.12" and python_version < "4.0"
-django-extensions==4.0 ; python_version >= "3.12" and python_version < "4.0"
+django-extensions==4.1 ; python_version >= "3.12" and python_version < "4.0"
 django-extra-fields==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
+django-filter==24.3 ; python_version >= "3.12" and python_version < "4.0"
 django-ical==1.9.2 ; python_version >= "3.12" and python_version < "4.0"
 django-media-serv @ git+https://github.com/dbca-wa/django-media-serv.git@2b3876c20c6445a8356848db3eb9850ddfe4ba9e ; python_version >= "3.12" and python_version < "4.0"
 django-multiselectfield==0.1.13 ; python_version >= "3.12" and python_version < "4.0"
@@ -44,13 +45,13 @@ django5-six @ git+https://github.com/dbca-wa/django5-utils-six.git@cea09d14209de
 django==5.2 ; python_version >= "3.12" and python_version < "4.0"
 djangorestframework-csv==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
 djangorestframework-datatables==0.7.2 ; python_version >= "3.12" and python_version < "4.0"
-djangorestframework-gis==1.0 ; python_version >= "3.12" and python_version < "4.0"
-djangorestframework==3.16.0 ; python_version >= "3.12" and python_version < "4.0"
+djangorestframework-gis==1.1 ; python_version >= "3.12" and python_version < "4.0"
+djangorestframework==3.15.2 ; python_version >= "3.12" and python_version < "4.0"
 docopt==0.6.2 ; python_version >= "3.12" and python_version < "4.0"
 et-xmlfile==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 faker==12.0.1 ; python_version >= "3.12" and python_version < "4.0"
 geojson==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
-greenlet==3.1.1 ; python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
+greenlet==3.1.1 ; python_version >= "3.12" and python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 gunicorn==23.0.0 ; python_version >= "3.12" and python_version < "4.0"
 icalendar==6.1.3 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
@@ -61,7 +62,7 @@ jsonlines==4.0.0 ; python_version >= "3.12" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema-specifications==2024.10.1 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema==4.23.0 ; python_version >= "3.12" and python_version < "4.0"
-ledger-api-client @ git+https://github.com/dbca-wa/ledger_api_client.git@61ae5f94108fa7903e6c6b9678ab6b1455bb07ec ; python_version >= "3.12" and python_version < "4.0"
+ledger-api-client @ git+https://github.com/dbca-wa/ledger_api_client.git@27481b54b4822f725aee382be5eb6bc23f9f610f ; python_version >= "3.12" and python_version < "4.0"
 linear-tsv==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -70,7 +71,7 @@ mixer==7.2.2 ; python_version >= "3.12" and python_version < "4.0"
 openpyxl==3.1.5 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
 phonenumbers==9.0.2 ; python_version >= "3.12" and python_version < "4.0"
-pillow==11.1.0 ; python_version >= "3.12" and python_version < "4"
+pillow==11.1.0 ; python_version >= "3.12" and python_version < "4.0"
 psycopg2-binary==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
 py4j==0.10.9.9 ; python_version >= "3.12" and python_version < "4.0"
 pycountry==24.6.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -79,7 +80,7 @@ python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.
 python-decouple==3.8 ; python_version >= "3.12" and python_version < "4.0"
 pytz==2020.5 ; python_version >= "3.12" and python_version < "4.0"
 referencing==0.36.2 ; python_version >= "3.12" and python_version < "4.0"
-reportlab==4.3.1 ; python_version >= "3.12" and python_version < "4"
+reportlab==4.3.1 ; python_version >= "3.12" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
 rfc3986==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 rich==14.0.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -91,10 +92,10 @@ sqlalchemy==2.0.40 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.5.3 ; python_version >= "3.12" and python_version < "4.0"
 static3==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 tableschema==1.21.0 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.13.1 ; python_version >= "3.12" and python_version < "4.0"
+typing-extensions==4.13.2 ; python_version >= "3.12" and python_version < "4.0"
 tzdata==2025.2 ; python_version >= "3.12" and python_version < "4.0"
 unicodecsv==0.14.1 ; python_version >= "3.12" and python_version < "4.0"
-urllib3==2.3.0 ; python_version >= "3.12" and python_version < "4.0"
+urllib3==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
 webtemplate-dbca @ git+https://github.com/dbca-wa/webtemplate2.git@955544f4acbc770d07da665c7488f89ccb3486ec ; python_version >= "3.12" and python_version < "4.0"
 werkzeug==3.1.3 ; python_version >= "3.12" and python_version < "4.0"
 whitenoise==6.9.0 ; python_version >= "3.12" and python_version < "4.0"
