Updated python packages and added djlint, a django template linter, to dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ optional = true
 django-debug-toolbar = ">=3.8"
 ipdb = ">=0.13"
 pylint = ">=2.13"
+djlint = ">=1.0.0"
 flake8 = ">=6.1"
 autopep8 = ">=2.0"
 black = ">=23.0"
